MDEV-7410 Temporary table name conflict between sessions

workaround for missing SP auto-reparse.
allow the user to disable stored_program_cache_size, if he wants